<resources>
    <string name="fragment_healthknow">中医知识</string>
    <string name="fragment_myhealth">我的健康</string>
    <string name="fragment_healthdata">健康数据</string>
    <string name="fragment_considenty">体质辨识</string>
    <string name="fragment_mydevices">健康设备</string>
    <string name="app_name">智慧中医</string>
    <string name="mycollection">我的收藏</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">设置</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="hello_world">Hello world!</string>
    <string name="fragment_one">One</string>
    <string name="fragment_two">Two</string>
    <string name="fragment_three">Three</string>
    <string name="fragment_about">About</string>
    <string name="number1">I</string>
    <string name="number2">II</string>
    <string name="number3">III</string>
    <string name="fragment">Fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">张小五</string>
    <string name="no_login_name">立即登录</string>
    <string name="user_email">mmbialas@gmail.com</string>
    <string name="content_description">image view</string>
    <string name="about_text">This application is an example of a Navigation Drawer implementation using a new/bind pattern and the ButterKnife library.</string>
    <string name="about_text2">It was written only for development purposes.</string>
    <string name="about_author">Author: Michal Bialas</string>
    <string name="about_contact">Contact: mmbialas@gmail.com</string>
    <string name="about_libraries">Libraries:</string>
    <string name="about_butterknife">ButterKnife by Jake Wharton</string>
    <string name="about_robototextview">RobotoTextView by Evgeny Shishkin</string>
    <string name="about_msg_subject">[NavigationDrawerSI]</string>
    <string name="about_mail_chooser">Send with</string>
    <string name="about_intent_failed">The requested application could not be launched.</string>
    <string name="title_activity_test_nav">TestNavActivity</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_view_fragement_acvitity">ViewFragementAcvitity</string>
    <string name="title_activity_slide_main">SlideMainActivity</string>
    <string name="title_activity_tab_main">TabMainActivity</string>
    <string name="github">GitHub</string>
    <string name="github_tip">TrineaAndroidCommon on GitHub</string>
    <string name="description">Description: </string>
    <string name="github_trinea">http://github.com/trinea</string>
    <string name="profile">Profile: </string>
    <string name="desc_default">Trinea</string>
    <string name="mock_item">Mock Item</string>
    <string name="title_activity_detile_result">DetileResultActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_pinghezhi">平和质</string>
    <string name="title_activity_qixuzhi">气虚质</string>
    <string name="title_activity_record">饮食录入</string>
    <string name="title_activity_result">辨识结果</string>
    <string name="chooseone">没有/根本不</string>
    <string name="choosetwo">很少/有一点</string>
    <string name="choosethree">有时/有些</string>
    <string name="choosefour">经常/相当</string>
    <string name="choosefive">总是/非常</string>
    <string name="score1">没有</string>
    <string name="score2">很少</string>
    <string name="score3">有时</string>
    <string name="score4">经常</string>
    <string name="score5">总是</string>
    <string name="submit">提交</string>
    <string name="str_dialog_title">请稍等....</string>
    <string name="str_dialog_body">正在执行后台运算中....</string>
    <string name="title_activity_constitution">我的体质</string>
    <string name="myhistory">体质测试历史</string>
    <string name="btn_to_tizhi">立即测试</string>
    <string name="title_activity_health_suggestions">HealthSuggestions</string>
    <string name="internete_nao_autorizado">internete_nao_autorizado</string>
    <string name="internete_nao_encontrado">internete_nao_encontrado</string>
    <string name="internete_link_redirecionado">internete_link_redirecionado</string>
    <string name="internete_link_offiline">internete_link_offiline</string>
    <string name="user_collection_amount">232</string>
    <string name="user_collection_name">收藏</string>
    <string name="user_claim_amount">6</string>
    <string name="user_claim_name">预警</string>
    <string name="user_usetime_amount">142</string>
    <string name="user_usetime_name">使用</string>
    <string name="user_info_listitem_active">活     动</string>
    <string name="user_info_listitem_circle">圈     子</string>
    <string name="user_info_listitem_message">消     息</string>
    <string name="title_activity_my_collection">MyCollection</string>
    <string name="title_activity_health_tending">HealthTendingActivity</string>
    <string name="title_activity_health_warning">健康预警</string>
    <string name="internete_link_offiline_other">offiline_other</string>
    <string name="all">体质辨识综合题库</string>
    <string name="all_question">综合题库</string>
    <string name="thumb_up">赞</string>
    <string name="heart">收藏</string>
    <string name="picture_explain">未病养生，防病于先</string>
    <string name="mycollection_url">http://10.120.59.9:81/tbhealthsuggestions</string>
    <string name="healthtending">健康趋势</string>
    <string name="queding">确认</string>
    <string name="tv_stepnumber_name">步数:</string>
    <string name="tv_movedistance_name">距离:</string>
    <string name="tv_calorieconsume_name">消耗:</string>
    <string name="tv_calorieconsume_unit">卡</string>
    <string name="tv_movedistance_unit">千米</string>
    <string name="tv_stepnumber_unit">步</string>
    <string name="tv_staticcalorieconsume_name">静止消耗:</string>
    <string name="tv_movecalorieconsume_name">运动消耗:</string>
    <string name="tv_moveccalorieconsume_name">运动消耗:</string>
    <string name="tv_longestactivetime_name">最长运动:</string>
    <string name="tv_time_unit_hour">小时</string>
    <string name="tv_longestidletime_name">最长休息:</string>
    <string name="tv_crawedfloor_unit">层</string>
    <string name="tv_fallitems_name">摔倒次数:</string>
    <string name="tv_fallitems_unit">次</string>
    <string name="tv_crawedfloor_name">已爬楼层:</string>
    <string name="loadingtext">加载中...</string>
    <string name="loadingtitle">加載中</string>
    <string name="tv_sportanalyse_text">运动情况分析</string>
    <string name="title_activity_sport_record_entering">SportRecordEnteringActivity</string>
    <string name="SportrecordsEntring">增加运动</string>
    <string name="nodata">还没有数据！</string>
    <string name="action_delete">删除</string>
    <string name="title_activity_health_suggestion_expand">HealthSuggestionExpand</string>
    <string name="healthsuggestionexpandlabel1">体质</string>
    <string name="huoqu">我要获取</string>
    <string name="jianyi">建议</string>
    <string name="diet">饮食</string>
    <string name="sleep">作息</string>
    <string name="sport">运动</string>
    <string name="title_activity_health_suggestion_expand2">HealthSuggestionExpand2</string>
    <string name="tv_sleeptimenumber_name">您已睡眠</string>
    <string name="tv_deepsleeptime_name">熟睡时间</string>
    <string name="tv_shallowsleeptime_name">浅睡时间</string>
    <string name="tv_sleepanalyse_text">睡眠情况分析</string>
    <string name="tv_wakeuptime_name">醒来次数</string>
    <string name="tv_gosleep_name">入睡时间</string>
    <string name="tv_totalsleeptime_name">卧床时间</string>
    <string name="tv_waketime_name">清醒时间</string>
    <string name="tv_valueget_name">能量摄入</string>
    <string name="tv_waterget_name">水分摄入</string>
    <string name="tv_weight_unit">克</string>
    <string name="tv_protein_name">蛋白质摄入</string>
    <string name="tv_fat_name">脂肪摄入</string>
    <string name="tv_cholesterol_name">胆固醇摄入</string>
    <string name="tv_fatty_acids_name">脂肪酸摄入</string>
    <string name="tv_eatinganalyse_text">饮食情况分析</string>
    <string name="title_activity_custom_dialog_acivity">CustomDialogAcivity</string>
    <string name="title_activity_no_net">NoNetActivity</string>
    <string name="tv_sleepperday">小时/天（平均）</string>
    <string name="tv_waketimeperday">次醒来（平均）</string>
    <string name="deepsleep">深睡</string>
    <string name="shallowsleeptime">浅睡</string>
    <string name="intosleeptime">入睡</string>
    <string name="energy">能量</string>
    <string name="water">水分</string>
    <string name="protein">蛋白质</string>
    <string name="fat">脂肪</string>
    <string name="fiber">膳食纤维</string>
    <string name="carbohydrate">碳水化合物</string>
    <string name="vitamina">维生素A</string>
    <string name="vitaminb1">维生素B1</string>
    <string name="vitaminb2">维生素B2</string>
    <string name="elementen">维生素B6</string>
    <string name="vitaminb12">维生素B12</string>
    <string name="vitaminc">维生素C</string>
    <string name="vitamind">维生素D</string>
    <string name="vitamine">维生素E</string>
    <string name="vitamink">维生素K</string>
    <string name="nicotinicacid">烟酸</string>
    <string name="folate">叶酸</string>
    <string name="sodium">钠元素</string>
    <string name="calcium">钙元素</string>
    <string name="iron">铁元素</string>
    <string name="potassium">钾元素</string>
    <string name="zinc">锌元素</string>
    <string name="magnesium">镁元素</string>
    <string name="copper">铜元素</string>
    <string name="chomuim">铬元素</string>
    <string name="mangaesium">锰元素</string>
    <string name="molybdenum">钼元素</string>
    <string name="iodine">碘元素</string>
    <string name="phosphrus">磷元素</string>
    <string name="selenium">硒元素</string>
    <string name="fluorine">氟元素</string>
    <string name="cholesterol">胆固醇</string>
    <string name="saturated">饱和脂肪酸</string>
    <string name="acidregurgitation">泛酸</string>
    <string name="biotin">生物素</string>
    <string name="choline">胆碱</string>
    <string name="carotene">胡萝卜素</string>
    <string name="element_select">请选择您要查看的元素种类</string>
    <string name="title_activity_element_select">选一选</string>
    <string name="deep_sleeptime_perday">熟睡时间(平均):</string>
    <string name="shadow_sleeptime_perday">浅睡时间(平均):</string>
    <string name="into_sleeptime_perday">入睡时间(平均):</string>
    <string name="bed_time_perday">卧床时间(平均):</string>
    <string name="clear_time_perday">清醒时间(平均):</string>
    <string name="times">次</string>
    <string name="waketime_perday">醒来次数(平均):</string>
    <string name="energy_intake">能量摄入:</string>
    <string name="ka">卡</string>
    <string name="water_intake">水分摄入:</string>
    <string name="protein_intake_perday">蛋白质摄入:</string>
    <string name="fat_intake_perday">脂肪摄入:</string>
    <string name="complete">完成</string>
    <string name="bind_success">绑定成功</string>
    <string name="rom_device_des">现在带上手环记录活动和睡眠！设置每天目标，设备将显示目标进度，在智能配件页面同步数据</string>
    <string name="smart_device_upgrade">升级手环</string>
    <string name="bind_radio_sucess_des">现在带上手环记录活动和睡眠！设置每天目标，设备将显示目标进度，在智能配件页面同步数据</string>
    <string name="download_rom">下载ROM</string>
    <string name="finish">完成</string>
    <string name="download_rom_note">您的配件没有升级ROM，下载升级吧！</string>
    <string name="download_rom_fun">好玩</string>
    <string name="download_rom_fun_text">戴上手环发现周围新事物</string>
    <string name="download_rom_specialty">专业</string>
    <string name="download_rom_specialty_text">大幅提高计步、睡眠准确度！</string>
    <string name="download_rom_social">社交</string>
    <string name="download_rom_social_text">运动爱好者扎堆</string>
    <string name="download_rom_btn_text">下载android版</string>
    <string name="logout">注销</string>
</resources>