<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/window_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:gravity="right"
        style="@style/top">

        <Button
            android:id="@+id/btn_close"
            android:text="@string/complete"
            style="@style/Submit_Button_Style" />
    </RelativeLayout>

    <TextView
        android:textSize="20.0sp"
        android:textColor="@android:color/background_dark"
        android:id="@+id/txt_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:layout_marginTop="30.0dip"
        android:text="@string/bind_success" />

    <TextView
        android:textSize="16.0sp"
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:id="@+id/txt_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:text="@string/bind_radio_sucess_des" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40.0dip"
        android:src="@drawable/icon_bind_success" />
</LinearLayout>