<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list"
    android:padding="5dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:gravity="center">


    <TextView
        android:id="@+id/tv1"
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radiogroup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/score1"
            android:textColor="@drawable/color_radio_text"
            android:textSize="@dimen/text_size_micro_1"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_check" />


        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/score2"
            android:textColor="@drawable/color_radio_text"
            android:textSize="@dimen/text_size_micro_1"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_check" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/score3"
            android:textColor="@drawable/color_radio_text"
            android:textSize="@dimen/text_size_micro_1"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_check" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:text="@string/score4"
            android:textColor="@drawable/color_radio_text"
            android:textSize="@dimen/text_size_micro_1"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_check" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_weight="1"
            android:text="@string/score5"
            android:textColor="@drawable/color_radio_text"
            android:textSize="@dimen/text_size_micro_1"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_check" />

        <RadioButton
            android:id="@+id/radio6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:focusable="false"
            android:layout_weight="1"
            android:visibility="gone"
            android:textColor="@drawable/color_radio_text"
            android:textSize="@dimen/text_size_micro_1"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/radio_check" />
    </RadioGroup>


</LinearLayout>